--- a/style.css
+++ b/style.css
@@ -36,36 +36,37 @@ header {
 
   padding: 2rem 0 2rem 0;
 
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-row: 1fr 1fr;
   justify-content: space-between;
-}
-
-.header-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: auto
 }
 
   header img {
     object-fit: cover;
     width: 100px;
     height: 100px;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 1;
+    grid-column-end: 1;
   }
 
   header ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-
-    display: flex;
-    align-items: center;
   }
 
     header ul li {
       margin: 0 1rem 0 1rem;
       text-align: center;
-    }
+
+      grid-row-start: 1;
+      grid-row-end: 1;
+      grid-column-start: 2;
+      grid-column-end: 9;
+      }
 
     header ul li a {
       text-decoration: none;
@@ -77,11 +78,12 @@ header {
         line-height: 2rem;
       }
 
-    header nav ul li a:hover {
-      color: #aeff00;
-      background-color: #aeff00;
-      border-radius: 1rem;
-      transition: 0.5s all ease-in;
+   
+    .bop-or-flop {
+      grid-row-start: 2;
+      grid-row-end: 2;
+      grid-column-start: 1;
+      grid-column-end: 9;
     }
 
 main {
