--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ body {
 
 .header-grid {
   width: 100%;
-  background-color: #e63946;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   gap: 2rem;
@@ -48,6 +47,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-content: center;
+    align-items: center;
   }
 
   .top-block-logo {
@@ -111,3 +112,4 @@ header {
   /* grid-template-rows: 1fr 1fr; */
   /* justify-content: space-between; */
 }
+
