adding pics and organization :)

--- a/style.css
+++ b/style.css
@@ -110,6 +110,33 @@ header {
   background-color: purple;
 }
 
+
+
+
+/* ---- Alex's section ---- */
+.the-scoop {
+
+}
+
+
+/* ---- Noor's section ---- */
+.listen-up {
+
+}
+
+
+/* ---- Corinna's section ---- */
+.art-and-media {
+
+}
+
+
+/* ---- Logan's section ---- */
+.watch-out {
+
+}
+
+
 footer {
   width: 100%;
   display: grid;
