--- a/style.css
+++ b/style.css
@@ -120,10 +120,73 @@ header {
 
 
 /* ---- Noor's section ---- */
+
 .listen-up {
+border: #e63946 solid 1px;
 
 }
 
+  .reviews {
+  border: #e63946 solid 1px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  text-align: center;
+  }
+
+.rating {
+  text-align: left;
+  }
+}
+
+  .rev0 {
+  border: #e63946 solid 1px;
+  }
+
+    .albm0 {
+    width: 5rem;
+    float: left;
+    flex: 0;
+}
+
+  .rev1 {
+  border: #e63946 solid 1px;
+  }
+
+    .albm1 {
+    width: 5rem;
+    float: left;
+    flex: 1;
+    }
+
+  .rev2 {
+  border: #e63946 solid 1px;
+  }
+
+    .albm2 {
+    width: 5rem;
+    float: left;
+    flex: 2;
+  }
+
+  .rev3 {
+  border: #e63946 solid 1px;
+  }
+
+    .albm3 {
+    width: 5rem;
+    float: left;
+    flex: 3;
+    }
+
+  .rev4 {
+  border: #e63946 solid 1px;
+  }
+
+    .albm4 {
+    width: 5rem;
+    float: left;
+    flex: 4;
+    }
 
 /* ---- Corinna's section ---- */
 .art-and-media {
