--- a/style.css
+++ b/style.css
@@ -46,63 +46,64 @@ header {
   gap: 2rem;
 }
 
+.top-block {
+  grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 1;
+  grid-row-end: 1;
+  background-color: green;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.top-block-logo {
+  width: 100px;
+}
+
+@media screen and (min-width: 800px) {
   .top-block {
-    grid-column-start: 1;
-    grid-column-end: 6;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    background-color: green;
-      display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-content: center;
-        align-items: center;
-        text-align: center;
+    display: flex;
+    flex-direction: row;
   }
+}
 
-  .top-block-logo {
-    width: 100px;
-    }
+.page-nav {
+  list-style-type: none;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
 
-      @media screen and (min-width: 800px) {
-        .top-block {
-          display: flex;
-          flex-direction: row;
-        }
-      }
+@media screen and (min-width: 800px) {
+  .page-nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+  }
+}
 
-    .page-nav {
-      list-style-type: none;
-      margin: auto;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      flex-wrap: nowrap;
-    }
-        @media screen and (min-width: 800px) {
-          .page-nav {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: row;
-          }
-        }
+.page-nav li {
+  padding: 0.5rem;
+}
 
-        .page-nav li{
-          padding: 0.5rem;
-        }
+.page-nav li a {
+  text-decoration: none;
+  color: white;
+}
 
-          .page-nav li a {
-            text-decoration: none;
-            color: white;
-          }
+.page-nav li a:hover {
+  color: red;
+}
 
-            .page-nav li a:hover {
-              color: red;
-            }
-
-.bottom-block{
+.bottom-block {
   grid-column-start: 1;
   grid-column-end: 6;
   grid-row-start: 2;
@@ -114,103 +115,101 @@ header {
 
 
 /* ---- Alex's section ---- */
-.the-scoop {
-
-}
+.the-scoop {}
 
 
 /* ---- Noor's section ---- */
 
 .listen-up {
-border: #e63946 solid 1px;
+  border: #e63946 solid 1px;
 }
 
-  .reviews {
+.reviews {
   border: #e63946 solid 1px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   text-align: center;
   margin: 0.5rem;
-  }
+}
 
-    .rating {
-      
-    }
+.rating {}
 
-    .listen-name {
-      font-weight: bold;
-    }
+.listen-name {
+  font-weight: bold;
+}
 
-    .listen-review {
+.listen-review {}
 
-    }
+.rev1 {
+  border: #e63946 solid 1px;
+}
 
-      .rev1 {
-      border: #e63946 solid 1px;
-      }
-        .albm1 {
-        width: 5rem;
-        float: left;
-        flex: 1;
-        }
+.albm1 {
+  width: 5rem;
+  float: left;
+  flex: 1;
+}
 
-      .rev2 {
-      border: #e63946 solid 1px;
-      }
-        .albm2 {
-        width: 5rem;
-        float: left;
-        flex: 2;
-        }
+.rev2 {
+  border: #e63946 solid 1px;
+}
 
-      .rev3 {
-      border: #e63946 solid 1px;
-      }
-        .albm3 {
-        width: 5rem;
-        float: left;
-        flex: 3;
-        }
+.albm2 {
+  width: 5rem;
+  float: left;
+  flex: 2;
+}
 
-      .rev4 {
-      border: #e63946 solid 1px;
-      }
-        .albm4 {
-        width: 5rem;
-        float: left;
-        flex: 4;
-        }
+.rev3 {
+  border: #e63946 solid 1px;
+}
+
+.albm3 {
+  width: 5rem;
+  float: left;
+  flex: 3;
+}
+
+.rev4 {
+  border: #e63946 solid 1px;
+}
+
+.albm4 {
+  width: 5rem;
+  float: left;
+  flex: 4;
+}
 
 /* ---- Corinna's section ---- */
-.art-and-media {
-
-}
+.art-and-media {}
 
 
 /* ---- Logan's section ---- */
 .watch-out {
   display: flex;
   flex-direction: column;
+  background: rgb(29,53,87);
+  background: linear-gradient(0deg, rgba(29,53,87,1) 90%, rgba(10,28,55,1) 100%);
 }
 
-.watch-out-intro{
-  display:flex;
+.watch-out-intro {
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-top: 1rem;
-  padding-bottom:1rem;
+  padding-bottom: 1rem;
 }
 
-.watch-out-title{
-  font-size:5rem;
+.watch-out-title {
+  font-size: 5rem;
 }
 
-.watch-out-subtitle{
-  font-size:2rem;
+.watch-out-subtitle {
+  font-size: 2rem;
 }
 
-.watch-out-header-reviews{
+.watch-out-header-reviews {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -221,48 +220,49 @@ border: #e63946 solid 1px;
   display: flex;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  border-radius: 1rem;;
+  border-radius: 1rem;
+  ;
   margin-right: 1rem;
   margin-left: 1rem;
   background-color: #122641;
 }
 
 
-.movie-review-content{
-  display:flex;
+.movie-review-content {
+  display: flex;
   flex-direction: column;
-  padding:1rem;
+  padding: 1rem;
 }
 
-.movie-poster{
+.movie-poster {
   width: 100px;
   height: 150px;
   margin-left: 1rem;
 }
 
-.full-review-link{
+.full-review-link {
   text-decoration: none;
   color: #f1faee;
 }
 
-.full-review-link:hover{
+.full-review-link:hover {
   text-decoration: underline;
-  color:#e63946;
+  color: #FCD53F;
 }
 
-.full-movie-review{
-  display:flex;
+.full-movie-review {
+  display: flex;
   align-items: center;
-  padding:1rem;
-  margin:1rem;
-  margin-left:4rem;
+  padding: 1rem;
+  margin: 1rem;
+  margin-left: 4rem;
   margin-right: 4rem;
-  border-radius:1rem;
+  border-radius: 1rem;
   background-color: #122641;
 }
 
-.review-content-section{
-  padding:1rem;
+.review-content-section {
+  padding: 1rem;
   border-radius: 1rem;
   margin-left: 1rem;
 }
@@ -274,45 +274,45 @@ border: #e63946 solid 1px;
   margin-right: 1rem;
 }
 
-.profile-pic-img{
-  width:25px;
-  height:25px;
+.profile-pic-img {
+  width: 25px;
+  height: 25px;
 }
 
-.review-post-section{
-  padding:1rem;
-  border-radius:1rem;
+.review-post-section {
+  padding: 1rem;
+  border-radius: 1rem;
   margin-top: 1rem;
-  background-color:#0a192d;
+  background-color: #0a192d;
 }
 
-.review-title{
- font-size:2rem;
+.review-title {
+  font-size: 2rem;
 }
 
-.user-info{
-  display:flex;
+.user-info {
+  display: flex;
   align-items: center;
-  border: #e63946 solid 1px;
   max-width: fit-content;
   padding: 0.5rem;
   border-radius: 1rem;
-  margin-top:0.5rem;
+  margin-top: 0.5rem;
+  background-color: #04101d;
 }
 
-.user-info p{
-  margin-left:0.5rem;
+.user-info p {
+  margin-left: 0.5rem;
   font-size: 1.2rem;
 }
 
-.review-text{
-  margin-top:1rem;
+.review-text {
+  margin-top: 1rem;
   font-size: 1.1rem;
 }
 
-.full-movie-reviews-section{
-  margin-top:1rem;
-  margin-bottom:2rem;
+.full-movie-reviews-section {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
 }
 
 /* ---- end of Logan's section ---- */
@@ -324,37 +324,37 @@ footer {
   gap: 2rem;
 }
 
-  .footer-styling {
-    grid-column-start: 1;
-    grid-column-end: 6;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    background-color: green;
+.footer-styling {
+  grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 1;
+  grid-row-end: 1;
+  background-color: green;
 
-      display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-content: center;
-        align-items: center;
-        text-align: center;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+}
 
-      footer img{
-        width: 100px;
-        height: 100px;
-      }
+footer img {
+  width: 100px;
+  height: 100px;
+}
 
-      footer ul {
-        list-style-type: none;
-        display: flex;
-        flex-direction: row;
-      }
+footer ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+}
 
-        footer ul li{
-          padding: 0.5rem;
-        }
+footer ul li {
+  padding: 0.5rem;
+}
 
-          footer ul li a{
-            text-decoration: none;
-            color: white;
-          }
+footer ul li a {
+  text-decoration: none;
+  color: white;
+}
